force-app/main/default/objects/Contact/fields/Are_you_a_US_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_US_Citizen__c</fullName>
    <label>Are you a US Citizen?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>