force-app/main/default/objects/Contact/fields/Date_Attended2__c.field-meta.xml
<CustomField>
    <fullName>Date_Attended2__c</fullName>
    <description>college date attended 2</description>
    <label>Date Attended</label>
    <type>Date</type>
</CustomField>