force-app/main/default/objects/Contact/fields/Date_Attended3__c.field-meta.xml
<CustomField>
    <fullName>Date_Attended3__c</fullName>
    <label>Date Attended</label>
    <type>Date</type>
</CustomField>