force-app/main/default/objects/Contact/fields/Date_Attended__c.field-meta.xml
<CustomField>
    <fullName>Date_Attended__c</fullName>
    <description>College date attended</description>
    <label>Date Attended</label>
    <type>Date</type>
</CustomField>