force-app/main/default/objects/Contact/fields/Degree_Earned2__c.field-meta.xml
<CustomField>
    <fullName>Degree_Earned2__c</fullName>
    <label>Degree Earned?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>