force-app/main/default/objects/Contact/fields/GED_Date__c.field-meta.xml
<CustomField>
    <fullName>GED_Date__c</fullName>
    <label>GED Date</label>
    <type>Date</type>
</CustomField>