force-app/main/default/objects/Contact/fields/I_am_applying_to_serve_on__c.field-meta.xml
<CustomField>
    <fullName>I_am_applying_to_serve_on__c</fullName>
    <label>I am applying to serve on</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retreat Team</fullName>
            </value>
            <value>
                <fullName>Discipleship Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>