force-app/main/default/objects/Contact/fields/Name_of_College_University3__c.field-meta.xml
<CustomField>
    <fullName>Name_of_College_University3__c</fullName>
    <label>Name of College/University3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>