force-app/main/default/objects/Contact/fields/Name_of_College_Unversity2__c.field-meta.xml
<CustomField>
    <fullName>Name_of_College_Unversity2__c</fullName>
    <label>Name of College/Unversity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>