force-app/main/default/objects/Contact/fields/Raised_in_Hispanic_Latino_Home__c.field-meta.xml
<CustomField>
    <fullName>Raised_in_Hispanic_Latino_Home__c</fullName>
    <label>Raised in Hispanic/Latino Home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>