force-app/main/default/objects/Contact/recordTypes/Missionary.recordType-meta.xml
<RecordType>
    <fullName>Missionary</fullName>
    <active>true</active>
    <description>A Contact representing a Missionary</description>
    <label>Missionary</label>
</RecordType>